--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@ input {
 </div>
 
 <ul id="myUL">
-  <li>Hit the gym</li>
-  <li class="checked">Pay bills</li>
-  <li>Meet George</li>
-  <li>Buy eggs</li>
-  <li>Read a book</li>
+  <li>Hit the Gym</li>
+  <li class="checked">Pay Bills</li>
+  <li>Meet Frnds</li>
+  <li>Buy Deeds</li>
+  <li>Read a Book</li>
   <li>Organize office</li>
 </ul>
 
