--- a/index.html
+++ b/index.html
@@ -128,18 +128,22 @@ input {
 <body>
 
 <div id="myDIV" class="header">
-  <h2 style="margin:5px">My To Do List</h2>
-  <input type="text" id="myInput" placeholder="Title...">
+  <h2 style="margin:5px">Simple To Do List Task</h2>
+  <h4 style="margin:5px">*****My Cars  List*****</h4>
+   <input type="text" id="myInput" placeholder="Title...">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
 
 <ul id="myUL">
-  <li>Hit the Gym</li>
-  <li class="checked">Pay Bills</li>
-  <li>Meet Frnds</li>
-  <li>Buy Deeds</li>
-  <li>Read a Book</li>
-  <li>Organize office</li>
+  <li>POLO</li>
+  <li class="checked">CREATA </li>
+  <li>HYNDIA I20</li>
+  <li>KIA SELTOS</li>
+  <li>THAR</li>
+    <li>GRAND I10</li>
+    <li>INNOVA CRYSTA</li>
+
+
 </ul>
 
 <script>
