--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@ input {
 </div>
 
 <ul id="myUL">
-  <li>POLO 🚗</li>
-  <li class="checked">CREATA 🚗</li>
-  <li>HYNDIA I20 🚗</li>
-  <li>KIA SELTOS 🚗</li>
-  <li>THAR 🚗</li>
-    <li>GRAND I10 🚗</li>
-    <li>INNOVA CRYSTA 🚗</li>
+  <li>POLO </li>
+  <li class="checked">CREATA </li>
+  <li>HYNDIA I20 </li>
+  <li>KIA SELTOS </li>
+  <li>THAR </li>
+    <li>GRAND I10 </li>
+    <li>INNOVA CRYSTA </li>
 
 
 </ul>
