--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ input {
 
 <div id="myDIV" class="header">
   <h2 style="margin:5px">Simple To Do List Task</h2>
-  <h4 style="margin:5px">🚗🚗🚗**My Cars  List**🚗🚗🚗</h4>
+  <h4 style="margin:5px">$ My Cars  List $</h4>
    <input type="text" id="myInput" placeholder="Title...">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
